--- a/app/src/main/res/layout/fragment_kakao_friends.xml
+++ b/app/src/main/res/layout/fragment_kakao_friends.xml
@@ -31,7 +31,7 @@
                     android:text="친구"
                     android:textColor="@color/black"
                     android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -97,7 +97,8 @@
                 android:gravity="center"
                 android:text="허수진"
                 android:textSize="18dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
         </LinearLayout>
 
         <View
@@ -118,7 +119,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:text="친구 150"
-                android:textSize="15dp" />
+                android:textSize="15dp"
+                android:textColor="@color/black"/>
 
             <View
                 android:layout_width="0dp"
