--- a/app/src/main/res/layout/activity_pay_dactivity.xml
+++ b/app/src/main/res/layout/activity_pay_dactivity.xml
@@ -99,22 +99,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:text="결제수단"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view30" />
+        app:layout_constraintTop_toBottomOf="@+id/adverise" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/sliderViewPager"
         android:layout_width="390dp"
         android:layout_height="170dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginTop="85dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view30">
+        app:layout_constraintTop_toBottomOf="@+id/adverise">
 
 
     </androidx.viewpager2.widget.ViewPager2>
@@ -145,10 +145,10 @@
         android:id="@+id/adverise"
         android:layout_width="410dp"
         android:layout_height="120dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/screenedu_blackground"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView93" />
+        app:layout_constraintTop_toTopOf="@+id/view30" />
 
     <TextView
         android:id="@+id/textView95"
