--- a/app/src/main/res/layout/activity_naver_search.xml
+++ b/app/src/main/res/layout/activity_naver_search.xml
@@ -26,6 +26,7 @@
             android:background="@null"/>
 
         <EditText
+            android:id="@+id/search_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:textSize="16sp"
@@ -137,6 +138,7 @@
         android:background="@color/naver_search_bottom">
 
         <Button
+            android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel"
