--- a/app/src/main/res/layout/activity_google_defaultinfo.xml
+++ b/app/src/main/res/layout/activity_google_defaultinfo.xml
@@ -85,7 +85,10 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:paddingTop="12dp"
-            android:paddingBottom="12dp"/>
+            android:paddingBottom="12dp"
+            android:focusable="false"
+            android:clickable="true"/>
+
 
         <!-- 일 입력 창 -->
         <EditText
@@ -121,6 +124,33 @@
         android:paddingEnd="16dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"/>
+
+    <!-- "안내멘트" 텍스트 -->
+    <TextView
+        android:id="@+id/reason_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Google에서 생년월일 및 성별 정보를 요청하는 이유"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:textColor="#1B76EB"
+        app:layout_constraintTop_toBottomOf="@+id/gender_edittext"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="20dp"/>
+
+    <!-- "다음" 버튼 -->
+    <Button
+        android:id="@+id/defaultinfo_next_button"
+        android:layout_width="85dp"
+        android:layout_height="40dp"
+        android:text="다음"
+        android:background="@drawable/blue_rounded_button"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/reason_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"/>
 
 
 
