--- a/app/src/main/res/layout/activity_google_login.xml
+++ b/app/src/main/res/layout/activity_google_login.xml
@@ -92,6 +92,24 @@
         android:layout_marginTop="40dp"
         android:layout_marginStart="20dp"/>
 
+    <!-- 임시
+    <TextView
+        android:id="@+id/guest_code_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="내 컴퓨터가 아닌가요? 시크릿 브라우저 창을 사용하여 로그인하세요. 게스트 코드 사용 방법 자세히 알아보기"
+        android:textSize="14sp"
+        android:bufferType="spannable"
+        android:textColor="#1B76EB"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgot_email_text"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="40dp"
+        android:gravity="start"/> -->
+
+
 
     <!-- "계정 만들기" 버튼 -->
     <Button
