--- a/app/src/main/res/layout/activity_tpay.xml
+++ b/app/src/main/res/layout/activity_tpay.xml
@@ -158,10 +158,12 @@
         android:layout_marginTop="36dp"
         android:text="KTX 마일리지"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/view56"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view55" />
+        app:layout_constraintTop_toBottomOf="@+id/view55"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView164"
@@ -170,10 +172,12 @@
         android:layout_marginTop="36dp"
         android:text="0점"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/view56"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.651"
+        app:layout_constraintHorizontal_bias="0.731"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view55" />
+        app:layout_constraintTop_toBottomOf="@+id/view55"
+        app:layout_constraintVertical_bias="0.007" />
 
     <Button
         android:id="@+id/button42"
@@ -181,45 +185,52 @@
         android:layout_height="40dp"
         android:layout_marginTop="28dp"
         android:text="사용"
+        app:layout_constraintBottom_toTopOf="@+id/view56"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view55" />
+        app:layout_constraintTop_toBottomOf="@+id/view55"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView165"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:text="포인트 사용"
         android:textColor="#965EFF"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/view56"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view55" />
+        app:layout_constraintTop_toBottomOf="@+id/view55"
+        app:layout_constraintVertical_bias="0.413" />
 
     <TextView
         android:id="@+id/textView166"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="148dp"
         android:text="KTX 마일리지"
         android:textColor="#000000"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/view56"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view55" />
+        app:layout_constraintTop_toBottomOf="@+id/view55"
+        app:layout_constraintVertical_bias="0.658" />
 
     <View
         android:id="@+id/view56"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
-        android:layout_marginTop="384dp"
+        android:layout_marginTop="340dp"
+        android:background="#4C4C4C"
+        app:layout_constraintBottom_toTopOf="@+id/view58"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view47" />
+        app:layout_constraintTop_toBottomOf="@+id/view47"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/sliderViewPager"
@@ -230,7 +241,7 @@
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view56"
-        app:layout_constraintVertical_bias="0.0"></androidx.viewpager2.widget.ViewPager2>
+        app:layout_constraintVertical_bias="0.49"></androidx.viewpager2.widget.ViewPager2>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -262,13 +273,6 @@
             android:textSize="20sp" />
 
     </LinearLayout>
-
-    <View
-        android:id="@+id/view57"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="-1dp"
-        tools:layout_editor_absoluteY="-16dp" />
 
     <View
         android:id="@+id/view58"
