--- a/app/src/main/res/layout/activity_setting2_main.xml
+++ b/app/src/main/res/layout/activity_setting2_main.xml
@@ -696,6 +696,16 @@
                 app:layout_constraintStart_toEndOf="@id/setting_cover_image"
                 app:layout_constraintTop_toBottomOf="@id/setting_list_cover_text"/>
 
+            <Button
+                android:id="@+id/setting_display_btn"
+                android:layout_width="398dp"
+                android:layout_height="70dp"
+                android:background="@android:color/transparent"
+                android:text=""
+                app:layout_constraintBottom_toBottomOf="@+id/setting_display_info_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
 
