--- a/app/src/main/res/layout/activity_setting2_font.xml
+++ b/app/src/main/res/layout/activity_setting2_font.xml
@@ -37,32 +37,32 @@
         app:layout_constraintStart_toEndOf="@id/font_back_button"
         />
 
+
     <LinearLayout
         android:id="@+id/rounded_layout"
         android:layout_width="0dp"
         android:layout_height="300dp"
-        android:orientation="vertical"
-        android:background="@drawable/rounded_button"
-        app:layout_constraintTop_toBottomOf="@id/font_title_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp">
+        android:background="@drawable/rounded_button"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/font_title_text">
 
         <!-- Main TextView -->
         <TextView
             android:id="@+id/main_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="글자가 이 크기로 표시됩니다.&#10;1234567890!@#%*()_+-="
-            android:textColor="@color/black"
             android:layout_gravity="center"
             android:layout_marginTop="120dp"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="16dp"
+            android:text="글자가 이 크기로 표시됩니다.&#10;1234567890!@#%*()_+-="
+            android:textColor="@color/black" />
 
 
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/font_layout"
@@ -193,7 +193,7 @@
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
                 android:max="7"
-                android:progress="4" />
+                android:progress="3" />
 
             <TextView
                 android:layout_width="0dp"
