환경설정2 시크바 글씨크기 오류 수정

--- a/app/src/main/res/layout/activity_setting2_font.xml
+++ b/app/src/main/res/layout/activity_setting2_font.xml
@@ -58,6 +58,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="120dp"
             android:layout_marginBottom="16dp"
+            android:textSize="@dimen/main_text_size_default"
             android:text="글자가 이 크기로 표시됩니다.&#10;1234567890!@#%*()_+-="
             android:textColor="@color/black" />
 
