--- a/app/src/main/res/layout/item_naver_post.xml
+++ b/app/src/main/res/layout/item_naver_post.xml
@@ -46,11 +46,11 @@
             android:gravity="end">
 
             <ImageButton
-                android:id="@+id/more"
+                android:id="@+id/more_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:padding="8dp"
-                android:src="@drawable/todo_circle"
+                android:src="@drawable/naver_post_more_button"
                 android:scaleType="centerInside"
                 android:background="@null"
                 android:contentDescription="@string/more"/>
