--- a/app/src/main/res/layout/activity_naver_search.xml
+++ b/app/src/main/res/layout/activity_naver_search.xml
@@ -18,10 +18,11 @@
         android:background="@color/white">
 
         <ImageButton
+            android:id="@+id/previous_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:padding="8dp"
-            android:src="@drawable/todo_circle"
+            android:padding="12dp"
+            android:src="@drawable/naver_previous_button"
             android:scaleType="centerInside"
             android:background="@null"/>
 
@@ -39,14 +40,16 @@
             android:layout_height="wrap_content">
 
             <ImageButton
+                android:id="@+id/clear_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:padding="8dp"
-                android:src="@drawable/todo_circle"
+                android:padding="12dp"
+                android:src="@drawable/naver_clear_button"
                 android:scaleType="centerInside"
                 android:background="@null"/>
 
             <ImageButton
+                android:id="@+id/search_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:padding="8dp"
