--- a/app/src/main/res/layout/activity_naver_search_result.xml
+++ b/app/src/main/res/layout/activity_naver_search_result.xml
@@ -21,7 +21,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:padding="8dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/naver_logo"
             android:scaleType="centerInside"
             android:background="@null"
             android:contentDescription="@null"/>
@@ -42,10 +42,11 @@
             android:layout_height="wrap_content">
 
             <ImageButton
+                android:id="@+id/clear_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:padding="8dp"
-                android:src="@drawable/todo_circle"
+                android:padding="12dp"
+                android:src="@drawable/naver_clear_button"
                 android:scaleType="centerInside"
                 android:background="@null"
                 android:contentDescription="@null"/>
@@ -77,11 +78,11 @@
         android:layout_alignParentBottom="true">
 
         <ImageButton
-            android:id="@+id/bottom_naver_button"
+            android:id="@+id/home_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:padding="8dp"
-            android:src="@drawable/todo_circle"
+            android:padding="12dp"
+            android:src="@drawable/naver_home_button"
             android:scaleType="centerInside"
             android:background="@null"
             android:contentDescription="@null"
@@ -94,23 +95,23 @@
             android:id="@+id/previous_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_toEndOf="@id/bottom_naver_button"
-            android:padding="8dp"
-            android:src="@drawable/todo_circle"
+            android:layout_toEndOf="@id/home_button"
+            android:padding="12dp"
+            android:src="@drawable/naver_previous_button"
             android:scaleType="centerInside"
             android:background="@null"
             android:contentDescription="@null"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/bottom_naver_button"
+            app:layout_constraintStart_toEndOf="@id/home_button"
             app:layout_constraintEnd_toStartOf="@id/next_button"/>
 
         <ImageButton
             android:id="@+id/next_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:padding="8dp"
-            android:src="@drawable/todo_circle"
+            android:padding="12dp"
+            android:src="@drawable/naver_next_button"
             android:scaleType="centerInside"
             android:background="@null"
             android:contentDescription="@null"
@@ -124,7 +125,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:padding="8dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/naver_search_menu_button"
             android:scaleType="centerInside"
             android:background="@null"
             android:contentDescription="@null"
@@ -137,8 +138,8 @@
             android:id="@+id/refresh_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:padding="8dp"
-            android:src="@drawable/todo_circle"
+            android:padding="12dp"
+            android:src="@drawable/naver_refresh_button"
             android:scaleType="centerInside"
             android:background="@null"
             android:contentDescription="@null"
@@ -165,8 +166,8 @@
             android:id="@+id/bottom_other_menu_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:padding="8dp"
-            android:src="@drawable/todo_circle"
+            android:padding="12dp"
+            android:src="@drawable/naver_bottom_menu_button"
             android:scaleType="centerInside"
             android:background="@null"
             android:contentDescription="@null"
