--- a/app/src/main/res/layout/item_naver_result_post.xml
+++ b/app/src/main/res/layout/item_naver_result_post.xml
@@ -40,8 +40,8 @@
                 android:id="@+id/more_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:padding="8dp"
-                android:src="@drawable/todo_circle"
+                android:padding="12dp"
+                android:src="@drawable/naver_result_post_more_button"
                 android:scaleType="centerInside"
                 android:background="@null"
                 android:contentDescription="@string/more_button"/>
@@ -71,7 +71,7 @@
 
             <TextView
                 android:id="@+id/post_content"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/synergy_explanation"
                 android:textSize="12sp"
@@ -79,12 +79,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="end">
 
                 <ImageView
                     android:id="@+id/post_image"
-                    android:layout_width="256dp"
-                    android:layout_height="128dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:src="@drawable/sample_screenshot2"
                     android:contentDescription="@string/post_image"/>
 
