--- a/app/src/main/res/layout/activity_default_phone.xml
+++ b/app/src/main/res/layout/activity_default_phone.xml
@@ -29,7 +29,7 @@
             android:gravity="center"
             android:text="@string/phone"
             android:textSize="16sp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginStart="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
